# tf2-loadout-assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-19-loadout-browser-filters.md
docs/superpowers/specs/: 2026-07-19-loadout-browser-filters-design.md
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  ChatPanel.tsx  FilterBar.tsx  api.ts  conflicts.test.ts  conflicts.ts  filters.test.ts  filters.ts  index.css  savedLoadouts.ts  shareLink.ts  useSavedLoadouts.ts
src/tf2_loadout/: __init__.py  agent.py  api.py  catalog.py  config.py  conflicts.py  items_game.py  lore.py  models.py  pricing.py  pricing_client.py  schema_client.py
tests/: conftest.py  test_agent.py  test_agent_live.py  test_api.py  test_catalog.py  test_catalog_service.py  test_config.py  test_conflicts.py  test_items_game.py  test_lore.py  test_lore_live.py  test_pricing.py  test_pricing_client.py  test_pricing_live.py  test_schema_client.py  test_schema_live.py
