[project]
name = "tf2-loadout-assistant"
version = "0.1.0"
description = "Chat-driven assistant for TF2 cosmetic loadouts: style suggestions, equip-conflict detection, ratings, and pricing."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Yusuf Afzal", email = "yusufafzal12@gmail.com" }
]
requires-python = ">=3.11"
keywords = ["tf2", "team-fortress-2", "loadout", "cosmetics", "llm"]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.28.1",
    "pydantic>=2.9.0",
    # Provider-agnostic LLM layer. Extras pick which provider SDKs come along;
    # [openai] also covers Ollama and any OpenAI-compatible endpoint.
    "pydantic-ai-slim[anthropic,openai,openrouter]>=2.13.0",
    "python-dotenv>=1.0",
    # Reuse the wiki client + parsers from the sibling MCP project for item lore.
    "tf2-wiki-mcp",
    "vdf>=3.4",
]

[project.urls]
Repository = "https://github.com/yusufaf/tf2-loadout-assistant"

[project.scripts]
tf2-loadout-api = "tf2_loadout.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tf2_loadout"]

[tool.uv.sources]
tf2-wiki-mcp = { path = "../tf2-wiki-mcp", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-recording>=0.13.4",
    "vcrpy>=8.1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "live: hits real external APIs (Steam schema, backpack.tf); skipped unless --live is passed",
]
